main/default/objects/Band__c/Band__c.object-meta.xml
<CustomObject>
    <description>Danda che suona al festival</description>
    <label>Band</label>
    <nameField>
        <label>Nome Band</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>