main/default/objects/Band__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <description>Tipo di musica</description>
    <label>Genre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rock and Roll</fullName>
            </value>
            <value>
                <fullName>Bossanova</fullName>
            </value>
            <value>
                <fullName>Soul</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>