main/default/objects/Band__c/fields/Manager_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Manager_Phone_Number__c</fullName>
    <label>Manager Phone Number</label>
    <type>Phone</type>
</CustomField>