main/default/objects/Band__c/fields/Needs_Piano__c.field-meta.xml
<CustomField>
    <fullName>Needs_Piano__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se la Band necessita di un piano</description>
    <label>Needs Piano</label>
    <type>Checkbox</type>
</CustomField>