main/default/objects/Band__c/fields/Set_Time__c.field-meta.xml
<CustomField>
    <fullName>Set_Time__c</fullName>
    <description>Orari della band</description>
    <label>Set Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10 AM</fullName>
            </value>
            <value>
                <fullName>11 AM</fullName>
            </value>
            <value>
                <fullName>12 AM</fullName>
            </value>
            <value>
                <fullName>1 PM</fullName>
            </value>
            <value>
                <fullName>2 PM</fullName>
            </value>
            <value>
                <fullName>3 PM</fullName>
            </value>
            <value>
                <fullName>4 PM</fullName>
            </value>
            <value>
                <fullName>5 PM</fullName>
            </value>
            <value>
                <fullName>6 PM</fullName>
            </value>
            <value>
                <fullName>7 PM</fullName>
            </value>
            <value>
                <fullName>8 PM</fullName>
            </value>
            <value>
                <fullName>9 PM</fullName>
            </value>
            <value>
                <fullName>10 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>