main/default/objects/Band__c/fields/Twitter_Handle__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Handle__c</fullName>
    <description>Handler del testo twitter</description>
    <label>Twitter Handle</label>
    <length>168</length>
    <type>Text</type>
</CustomField>