main/default/objects/Band__c/listViews/Bossanova_Bands.listView-meta.xml
<ListView>
    <fullName>Bossanova_Bands</fullName>
    <columns>NAME</columns>
    <columns>Manager_Phone_Number__c</columns>
    <columns>Twitter_Handle__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Genre__c</field>
        <operation>equals</operation>
        <value>Bossanova</value>
    </filters>
    <label>Bossanova Bands</label>
</ListView>